--- a/css/common.css
+++ b/css/common.css
@@ -2,15 +2,16 @@
 @import url(https://fonts.googleapis.com/css?family=Muli);
 @import url(https://fonts.googleapis.com/css?family=Inconsolata);
 
-body {
+.remark-slide-content {
     font-family: 'Open Sans';
+    font-size: 22px;
 }
 
 .remark-slide-content h1,
 .remark-slide-content h2,
 .remark-slide-content h3 {
     font-family: Muli;
-    font-weight: normal;
+    font-weight: bold;
 }
 .remark-slide-content h2 {
     font-size: 40px;
@@ -26,7 +27,6 @@ body {
     line-height: 1em;
 }
 
-
 .remark-code, .remark-inline-code {
     font-family: Inconsolata, monospace;
 }
@@ -35,7 +35,7 @@ body {
     border: 1px solid #ccc;
 }
 
-blockquote {
+.remark-slide-content blockquote {
     border-radius: 5px;
     border: 1px solid #ccc;
     background: #f0f0f0;
@@ -44,7 +44,7 @@ blockquote {
     quotes: "\201C""\201D""\2018""\2019";
     position: relative;
 }
-blockquote:before {
+.remark-slide-content blockquote:before {
     color: #ccc;
     position: absolute;
     content: open-quote;
@@ -54,7 +54,7 @@ blockquote:before {
     vertical-align: -0.4em;
 }
 
-.col {
+.remark-slide-content .col {
     box-sizing: border-box;
     display: block;
     float: left;
@@ -63,25 +63,31 @@ blockquote:before {
     padding: 0;
     width: 50%;
 }
-.col:nth-of-type(odd) {
+.remark-slide-content .col:nth-of-type(odd) {
     padding: 0 1em 0 0;
 }
-.col:nth-of-type(even) {
+.remark-slide-content .col:nth-of-type(even) {
     padding: 0 0 0 1em;
 }
-.col.sep:nth-of-type(odd) {
+.remark-slide-content .col.sep:nth-of-type(odd) {
     border-right: 1px solid #ccc;
 }
-.col.sep:nth-of-type(even) {
+.remark-slide-content .col.sep:nth-of-type(even) {
     border-left: 1px solid #ccc;
 }
 
-.top-right {
+/* fix non-collapsing margin */
+.remark-slide-content .marginfix h3,
+.remark-slide-content .marginfix ul {
+    margin-top: 0;
+}
+
+.remark-slide-content .top-right {
     float: right;
     margin: 50px 0 0 2em;
 }
 
-.highlight {
+.remark-slide-content .highlight {
     color: #7d9726;
 }
 
