fix name of last slide

--- a/css/slides.css
+++ b/css/slides.css
@@ -57,7 +57,7 @@
     font-size: 22px;
 }
 
-#slide-theend .talkqr img {
+#slide-last .talkqr img {
     display: inline-block;
     width: 230px;
     height: 230px;
